--- a/anzeLife/package.json
+++ b/anzeLife/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vant/touch-emulator": "^1.1.0",
     "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
     "vant": "^2.0.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
